crates/data-dict-parquet/tests/snapshots/describe__all_null_columns_report_missing_alone.snap
---
source: crates/data-dict-parquet/tests/describe.rs
expression: "sanitize(&description.to_string(), &path)"
---
<file>.parquet: 3 rows × 1 column

reading — number
  distinct:  0
  missing:   3 (100.0%)
