crates/data-dict-parquet/tests/snapshots/describe__histograms_cover_every_binnable_kind-2.snap
---
source: crates/data-dict-parquet/tests/describe.rs
expression: "sanitize(&json, &path)"
---
{
  "path": "<file>.parquet",
  "rows": 6,
  "columns": [
    {
      "name": "count",
      "type": "number",
      "parquet_type": "INT64",
      "distinct": {
        "exact": 6
      },
      "missing": 0,
      "min": 1,
      "max": 6,
      "histogram": {
        "bins": [
          {
            "lower": 1,
            "upper": 2,
            "count": 2
          },
          {
            "lower": 2,
            "upper": 3,
            "count": 1
          },
          {
            "lower": 3,
            "upper": 4,
            "count": 1
          },
          {
            "lower": 4,
            "upper": 5,
            "count": 1
          },
          {
            "lower": 5,
            "upper": 6,
            "count": 1
          }
        ],
        "nan_count": 0
      },
      "examples": [
        1,
        2,
        3,
        4,
        5,
        6
      ]
    },
    {
      "name": "reading",
      "type": "number",
      "parquet_type": "DOUBLE",
      "missing": 0,
      "min": 1.5,
      "max": 5.5,
      "histogram": {
        "bins": [
          {
            "lower": 1.5,
            "upper": 1.7,
            "count": 1
          },
          {
            "lower": 1.7,
            "upper": 1.9,
            "count": 0
          },
          {
            "lower": 1.9,
            "upper": 2.1,
            "count": 0
          },
          {
            "lower": 2.1,
            "upper": 2.3,
            "count": 0
          },
          {
            "lower": 2.3,
            "upper": 2.5,
            "count": 2
          },
          {
            "lower": 2.5,
            "upper": 2.7,
            "count": 0
          },
          {
            "lower": 2.7,
            "upper": 2.9,
            "count": 0
          },
          {
            "lower": 2.9,
            "upper": 3.1,
            "count": 0
          },
          {
            "lower": 3.1,
            "upper": 3.3,
            "count": 0
          },
          {
            "lower": 3.3,
            "upper": 3.5,
            "count": 1
          },
          {
            "lower": 3.5,
            "upper": 3.7,
            "count": 0
          },
          {
            "lower": 3.7,
            "upper": 3.9,
            "count": 0
          },
          {
            "lower": 3.9,
            "upper": 4.1,
            "count": 0
          },
          {
            "lower": 4.1,
            "upper": 4.3,
            "count": 0
          },
          {
            "lower": 4.3,
            "upper": 4.5,
            "count": 1
          },
          {
            "lower": 4.5,
            "upper": 4.7,
            "count": 0
          },
          {
            "lower": 4.7,
            "upper": 4.9,
            "count": 0
          },
          {
            "lower": 4.9,
            "upper": 5.1,
            "count": 0
          },
          {
            "lower": 5.1,
            "upper": 5.3,
            "count": 0
          },
          {
            "lower": 5.3,
            "upper": 5.5,
            "count": 1
          }
        ],
        "nan_count": 0
      },
      "examples": [
        1.5,
        2.5,
        3.5,
        4.5,
        5.5
      ]
    },
    {
      "name": "event_date",
      "type": "date",
      "parquet_type": "INT32 / Date",
      "distinct": {
        "exact": 4
      },
      "missing": 0,
      "min": "2020-01-01",
      "max": "2024-01-01",
      "histogram": {
        "bins": [
          {
            "lower": "2020-01-01",
            "upper": "2020-03-15",
            "count": 2
          },
          {
            "lower": "2020-03-15",
            "upper": "2020-05-28",
            "count": 0
          },
          {
            "lower": "2020-05-28",
            "upper": "2020-08-10",
            "count": 0
          },
          {
            "lower": "2020-08-10",
            "upper": "2020-10-23",
            "count": 0
          },
          {
            "lower": "2020-10-23",
            "upper": "2021-01-05",
            "count": 1
          },
          {
            "lower": "2021-01-05",
            "upper": "2021-03-20",
            "count": 0
          },
          {
            "lower": "2021-03-20",
            "upper": "2021-06-02",
            "count": 0
          },
          {
            "lower": "2021-06-02",
            "upper": "2021-08-15",
            "count": 0
          },
          {
            "lower": "2021-08-15",
            "upper": "2021-10-28",
            "count": 0
          },
          {
            "lower": "2021-10-28",
            "upper": "2022-01-10",
            "count": 1
          },
          {
            "lower": "2022-01-10",
            "upper": "2022-03-25",
            "count": 0
          },
          {
            "lower": "2022-03-25",
            "upper": "2022-06-07",
            "count": 0
          },
          {
            "lower": "2022-06-07",
            "upper": "2022-08-20",
            "count": 0
          },
          {
            "lower": "2022-08-20",
            "upper": "2022-11-02",
            "count": 0
          },
          {
            "lower": "2022-11-02",
            "upper": "2023-01-15",
            "count": 0
          },
          {
            "lower": "2023-01-15",
            "upper": "2023-03-30",
            "count": 0
          },
          {
            "lower": "2023-03-30",
            "upper": "2023-06-12",
            "count": 0
          },
          {
            "lower": "2023-06-12",
            "upper": "2023-08-25",
            "count": 0
          },
          {
            "lower": "2023-08-25",
            "upper": "2023-11-07",
            "count": 0
          },
          {
            "lower": "2023-11-07",
            "upper": "2024-01-20",
            "count": 2
          }
        ],
        "nan_count": 0
      },
      "examples": [
        "2020-01-01",
        "2021-01-01",
        "2022-01-08",
        "2024-01-01"
      ]
    },
    {
      "name": "seen_utc",
      "type": "datetime",
      "parquet_type": "INT64 / Timestamp(us,UTC)",
      "distinct": {
        "exact": 3
      },
      "missing": 0,
      "min": "2020-01-01T00:00:00Z",
      "max": "2023-12-31T23:59:59Z",
      "histogram": {
        "bins": [
          {
            "lower": "2020-01-01",
            "upper": "2020-03-14",
            "count": 2
          },
          {
            "lower": "2020-03-14",
            "upper": "2020-05-26",
            "count": 0
          },
          {
            "lower": "2020-05-26",
            "upper": "2020-08-07",
            "count": 0
          },
          {
            "lower": "2020-08-07",
            "upper": "2020-10-19",
            "count": 2
          },
          {
            "lower": "2020-10-19",
            "upper": "2020-12-31",
            "count": 0
          },
          {
            "lower": "2020-12-31",
            "upper": "2021-03-14",
            "count": 0
          },
          {
            "lower": "2021-03-14",
            "upper": "2021-05-26",
            "count": 0
          },
          {
            "lower": "2021-05-26",
            "upper": "2021-08-07",
            "count": 0
          },
          {
            "lower": "2021-08-07",
            "upper": "2021-10-19",
            "count": 0
          },
          {
            "lower": "2021-10-19",
            "upper": "2021-12-31",
            "count": 0
          },
          {
            "lower": "2021-12-31",
            "upper": "2022-03-14",
            "count": 0
          },
          {
            "lower": "2022-03-14",
            "upper": "2022-05-26",
            "count": 0
          },
          {
            "lower": "2022-05-26",
            "upper": "2022-08-07",
            "count": 0
          },
          {
            "lower": "2022-08-07",
            "upper": "2022-10-19",
            "count": 0
          },
          {
            "lower": "2022-10-19",
            "upper": "2022-12-31",
            "count": 0
          },
          {
            "lower": "2022-12-31",
            "upper": "2023-03-14",
            "count": 0
          },
          {
            "lower": "2023-03-14",
            "upper": "2023-05-26",
            "count": 0
          },
          {
            "lower": "2023-05-26",
            "upper": "2023-08-07",
            "count": 0
          },
          {
            "lower": "2023-08-07",
            "upper": "2023-10-19",
            "count": 0
          },
          {
            "lower": "2023-10-19",
            "upper": "2023-12-31",
            "count": 2
          }
        ],
        "nan_count": 0
      },
      "examples": [
        "2020-01-01T00:00:00Z",
        "2020-09-13T12:26:40Z",
        "2023-12-31T23:59:59Z"
      ]
    },
    {
      "name": "seen_local",
      "type": "datetime",
      "parquet_type": "INT64 / Timestamp(ms,local)",
      "distinct": {
        "exact": 3
      },
      "missing": 0,
      "min": "2020-01-01T08:00:00.123",
      "max": "2024-01-01T08:00:00",
      "histogram": {
        "bins": [
          {
            "lower": "2020-01-01",
            "upper": "2020-03-14",
            "count": 2
          },
          {
            "lower": "2020-03-14",
            "upper": "2020-05-26",
            "count": 0
          },
          {
            "lower": "2020-05-26",
            "upper": "2020-08-07",
            "count": 0
          },
          {
            "lower": "2020-08-07",
            "upper": "2020-10-19",
            "count": 2
          },
          {
            "lower": "2020-10-19",
            "upper": "2020-12-31",
            "count": 0
          },
          {
            "lower": "2020-12-31",
            "upper": "2021-03-14",
            "count": 0
          },
          {
            "lower": "2021-03-14",
            "upper": "2021-05-26",
            "count": 0
          },
          {
            "lower": "2021-05-26",
            "upper": "2021-08-07",
            "count": 0
          },
          {
            "lower": "2021-08-07",
            "upper": "2021-10-19",
            "count": 0
          },
          {
            "lower": "2021-10-19",
            "upper": "2021-12-31",
            "count": 0
          },
          {
            "lower": "2021-12-31",
            "upper": "2022-03-14",
            "count": 0
          },
          {
            "lower": "2022-03-14",
            "upper": "2022-05-26",
            "count": 0
          },
          {
            "lower": "2022-05-26",
            "upper": "2022-08-07",
            "count": 0
          },
          {
            "lower": "2022-08-07",
            "upper": "2022-10-20",
            "count": 0
          },
          {
            "lower": "2022-10-20",
            "upper": "2023-01-01",
            "count": 0
          },
          {
            "lower": "2023-01-01",
            "upper": "2023-03-15",
            "count": 0
          },
          {
            "lower": "2023-03-15",
            "upper": "2023-05-27",
            "count": 0
          },
          {
            "lower": "2023-05-27",
            "upper": "2023-08-08",
            "count": 0
          },
          {
            "lower": "2023-08-08",
            "upper": "2023-10-20",
            "count": 0
          },
          {
            "lower": "2023-10-20",
            "upper": "2024-01-01",
            "count": 2
          }
        ],
        "nan_count": 0
      },
      "examples": [
        "2020-01-01T08:00:00.123",
        "2020-09-13T12:26:40",
        "2024-01-01T08:00:00"
      ]
    },
    {
      "name": "tod",
      "type": "number",
      "parquet_type": "INT32 / Time(ms,UTC)",
      "distinct": {
        "exact": 3
      },
      "missing": 0,
      "min": "09:30:00",
      "max": "17:00:00",
      "histogram": {
        "bins": [
          {
            "lower": "09:30:00",
            "upper": "09:52:30",
            "count": 2
          },
          {
            "lower": "09:52:30",
            "upper": "10:15:00",
            "count": 0
          },
          {
            "lower": "10:15:00",
            "upper": "10:37:30",
            "count": 0
          },
          {
            "lower": "10:37:30",
            "upper": "11:00:00",
            "count": 0
          },
          {
            "lower": "11:00:00",
            "upper": "11:22:30",
            "count": 0
          },
          {
            "lower": "11:22:30",
            "upper": "11:45:00",
            "count": 0
          },
          {
            "lower": "11:45:00",
            "upper": "12:07:30",
            "count": 2
          },
          {
            "lower": "12:07:30",
            "upper": "12:30:00",
            "count": 0
          },
          {
            "lower": "12:30:00",
            "upper": "12:52:30",
            "count": 0
          },
          {
            "lower": "12:52:30",
            "upper": "13:15:00",
            "count": 0
          },
          {
            "lower": "13:15:00",
            "upper": "13:37:30",
            "count": 0
          },
          {
            "lower": "13:37:30",
            "upper": "14:00:00",
            "count": 0
          },
          {
            "lower": "14:00:00",
            "upper": "14:22:30",
            "count": 0
          },
          {
            "lower": "14:22:30",
            "upper": "14:45:00",
            "count": 0
          },
          {
            "lower": "14:45:00",
            "upper": "15:07:30",
            "count": 0
          },
          {
            "lower": "15:07:30",
            "upper": "15:30:00",
            "count": 0
          },
          {
            "lower": "15:30:00",
            "upper": "15:52:30",
            "count": 0
          },
          {
            "lower": "15:52:30",
            "upper": "16:15:00",
            "count": 0
          },
          {
            "lower": "16:15:00",
            "upper": "16:37:30",
            "count": 0
          },
          {
            "lower": "16:37:30",
            "upper": "17:00:00",
            "count": 2
          }
        ],
        "nan_count": 0
      },
      "examples": [
        "09:30:00",
        "12:00:00",
        "17:00:00"
      ]
    }
  ]
}
