crates/data-dict-parquet/tests/snapshots/describe__histograms_cover_every_binnable_kind.snap
---
source: crates/data-dict-parquet/tests/describe.rs
expression: "sanitize(&description.to_string(), &path)"
---
<file>.parquet: 6 rows × 6 columns

count — number
  [1, 2]     ▇▇▇▇▇▇▇▇▇▇▇▇  2
  (2, 3]     ▇▇▇▇▇▇        1
  (3, 4]     ▇▇▇▇▇▇        1
  (4, 5]     ▇▇▇▇▇▇        1
  (5, 6]     ▇▇▇▇▇▇        1
  --------------------------
  distinct:                6
  missing:                 0

reading — number
  [1.50, 1.70]  ▇▇▇▇▇▇        1
  (1.70, 1.90]                0
  (1.90, 2.10]                0
  (2.10, 2.30]                0
  (2.30, 2.50]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  (2.50, 2.70]                0
  (2.70, 2.90]                0
  (2.90, 3.10]                0
  (3.10, 3.30]                0
  (3.30, 3.50]  ▇▇▇▇▇▇        1
  (3.50, 3.70]                0
  (3.70, 3.90]                0
  (3.90, 4.10]                0
  (4.10, 4.30]                0
  (4.30, 4.50]  ▇▇▇▇▇▇        1
  (4.50, 4.70]                0
  (4.70, 4.90]                0
  (4.90, 5.10]                0
  (5.10, 5.30]                0
  (5.30, 5.50]  ▇▇▇▇▇▇        1
  -----------------------------
  missing:                    0

event_date — date
  [2020-01-01, 2020-03-15]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  (2020-03-15, 2020-05-28]                0
  (2020-05-28, 2020-08-10]                0
  (2020-08-10, 2020-10-23]                0
  (2020-10-23, 2021-01-05]  ▇▇▇▇▇▇        1
  (2021-01-05, 2021-03-20]                0
  (2021-03-20, 2021-06-02]                0
  (2021-06-02, 2021-08-15]                0
  (2021-08-15, 2021-10-28]                0
  (2021-10-28, 2022-01-10]  ▇▇▇▇▇▇        1
  (2022-01-10, 2022-03-25]                0
  (2022-03-25, 2022-06-07]                0
  (2022-06-07, 2022-08-20]                0
  (2022-08-20, 2022-11-02]                0
  (2022-11-02, 2023-01-15]                0
  (2023-01-15, 2023-03-30]                0
  (2023-03-30, 2023-06-12]                0
  (2023-06-12, 2023-08-25]                0
  (2023-08-25, 2023-11-07]                0
  (2023-11-07, 2024-01-20]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  -----------------------------------------
  distinct:                               4
  missing:                                0

seen_utc — datetime
  [2020-01-01, 2020-03-14]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  (2020-03-14, 2020-05-26]                0
  (2020-05-26, 2020-08-07]                0
  (2020-08-07, 2020-10-19]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  (2020-10-19, 2020-12-31]                0
  (2020-12-31, 2021-03-14]                0
  (2021-03-14, 2021-05-26]                0
  (2021-05-26, 2021-08-07]                0
  (2021-08-07, 2021-10-19]                0
  (2021-10-19, 2021-12-31]                0
  (2021-12-31, 2022-03-14]                0
  (2022-03-14, 2022-05-26]                0
  (2022-05-26, 2022-08-07]                0
  (2022-08-07, 2022-10-19]                0
  (2022-10-19, 2022-12-31]                0
  (2022-12-31, 2023-03-14]                0
  (2023-03-14, 2023-05-26]                0
  (2023-05-26, 2023-08-07]                0
  (2023-08-07, 2023-10-19]                0
  (2023-10-19, 2023-12-31]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  -----------------------------------------
  distinct:                               3
  missing:                                0

seen_local — datetime
  [2020-01-01, 2020-03-14]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  (2020-03-14, 2020-05-26]                0
  (2020-05-26, 2020-08-07]                0
  (2020-08-07, 2020-10-19]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  (2020-10-19, 2020-12-31]                0
  (2020-12-31, 2021-03-14]                0
  (2021-03-14, 2021-05-26]                0
  (2021-05-26, 2021-08-07]                0
  (2021-08-07, 2021-10-19]                0
  (2021-10-19, 2021-12-31]                0
  (2021-12-31, 2022-03-14]                0
  (2022-03-14, 2022-05-26]                0
  (2022-05-26, 2022-08-07]                0
  (2022-08-07, 2022-10-20]                0
  (2022-10-20, 2023-01-01]                0
  (2023-01-01, 2023-03-15]                0
  (2023-03-15, 2023-05-27]                0
  (2023-05-27, 2023-08-08]                0
  (2023-08-08, 2023-10-20]                0
  (2023-10-20, 2024-01-01]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  -----------------------------------------
  distinct:                               3
  missing:                                0

tod — number
  [09:30:00, 09:52:30]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  (09:52:30, 10:15:00]                0
  (10:15:00, 10:37:30]                0
  (10:37:30, 11:00:00]                0
  (11:00:00, 11:22:30]                0
  (11:22:30, 11:45:00]                0
  (11:45:00, 12:07:30]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  (12:07:30, 12:30:00]                0
  (12:30:00, 12:52:30]                0
  (12:52:30, 13:15:00]                0
  (13:15:00, 13:37:30]                0
  (13:37:30, 14:00:00]                0
  (14:00:00, 14:22:30]                0
  (14:22:30, 14:45:00]                0
  (14:45:00, 15:07:30]                0
  (15:07:30, 15:30:00]                0
  (15:30:00, 15:52:30]                0
  (15:52:30, 16:15:00]                0
  (16:15:00, 16:37:30]                0
  (16:37:30, 17:00:00]  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  -------------------------------------
  distinct:                           3
  missing:                            0
