crates/data-dict-parquet/tests/snapshots/describe__json_matches_the_text.snap
---
source: crates/data-dict-parquet/tests/describe.rs
expression: "sanitize(&json, &path)"
---
{
  "path": "<file>.parquet",
  "rows": 9,
  "columns": [
    {
      "name": "species",
      "type": "string",
      "parquet_type": "BYTE_ARRAY",
      "distinct": {
        "exact": 3
      },
      "missing": 0,
      "value_counts": [
        {
          "value": "Adelie",
          "count": 4
        },
        {
          "value": "Gentoo",
          "count": 3
        },
        {
          "value": "Chinstrap",
          "count": 2
        }
      ],
      "examples": [
        "Adelie",
        "Chinstrap",
        "Gentoo"
      ]
    },
    {
      "name": "bill_length_mm",
      "type": "number",
      "parquet_type": "DOUBLE",
      "missing": 2,
      "min": 36.7,
      "max": 59.6,
      "histogram": {
        "bins": [
          {
            "lower": 36.7,
            "upper": 37.8,
            "count": 1
          },
          {
            "lower": 37.8,
            "upper": 39.0,
            "count": 0
          },
          {
            "lower": 39.0,
            "upper": 40.1,
            "count": 2
          },
          {
            "lower": 40.1,
            "upper": 41.3,
            "count": 0
          },
          {
            "lower": 41.3,
            "upper": 42.4,
            "count": 0
          },
          {
            "lower": 42.4,
            "upper": 43.6,
            "count": 0
          },
          {
            "lower": 43.6,
            "upper": 44.7,
            "count": 0
          },
          {
            "lower": 44.7,
            "upper": 45.9,
            "count": 0
          },
          {
            "lower": 45.9,
            "upper": 47.0,
            "count": 1
          },
          {
            "lower": 47.0,
            "upper": 48.2,
            "count": 0
          },
          {
            "lower": 48.2,
            "upper": 49.3,
            "count": 1
          },
          {
            "lower": 49.3,
            "upper": 50.4,
            "count": 1
          },
          {
            "lower": 50.4,
            "upper": 51.6,
            "count": 0
          },
          {
            "lower": 51.6,
            "upper": 52.7,
            "count": 0
          },
          {
            "lower": 52.7,
            "upper": 53.9,
            "count": 0
          },
          {
            "lower": 53.9,
            "upper": 55.0,
            "count": 0
          },
          {
            "lower": 55.0,
            "upper": 56.2,
            "count": 0
          },
          {
            "lower": 56.2,
            "upper": 57.3,
            "count": 0
          },
          {
            "lower": 57.3,
            "upper": 58.5,
            "count": 0
          },
          {
            "lower": 58.5,
            "upper": 59.6,
            "count": 1
          }
        ],
        "nan_count": 0
      },
      "examples": [
        36.7,
        39.1,
        39.5,
        46.5,
        48.7,
        50.0,
        59.6
      ]
    },
    {
      "name": "body_mass_g",
      "type": "number",
      "parquet_type": "INT64",
      "distinct": {
        "exact": 9
      },
      "missing": 0,
      "min": 3250,
      "max": 6300,
      "histogram": {
        "bins": [
          {
            "lower": 3250,
            "upper": 3403,
            "count": 1
          },
          {
            "lower": 3403,
            "upper": 3556,
            "count": 1
          },
          {
            "lower": 3556,
            "upper": 3709,
            "count": 2
          },
          {
            "lower": 3709,
            "upper": 3862,
            "count": 2
          },
          {
            "lower": 3862,
            "upper": 4015,
            "count": 0
          },
          {
            "lower": 4015,
            "upper": 4168,
            "count": 0
          },
          {
            "lower": 4168,
            "upper": 4321,
            "count": 0
          },
          {
            "lower": 4321,
            "upper": 4474,
            "count": 0
          },
          {
            "lower": 4474,
            "upper": 4627,
            "count": 0
          },
          {
            "lower": 4627,
            "upper": 4780,
            "count": 1
          },
          {
            "lower": 4780,
            "upper": 4933,
            "count": 1
          },
          {
            "lower": 4933,
            "upper": 5086,
            "count": 0
          },
          {
            "lower": 5086,
            "upper": 5239,
            "count": 0
          },
          {
            "lower": 5239,
            "upper": 5392,
            "count": 0
          },
          {
            "lower": 5392,
            "upper": 5545,
            "count": 0
          },
          {
            "lower": 5545,
            "upper": 5698,
            "count": 0
          },
          {
            "lower": 5698,
            "upper": 5851,
            "count": 0
          },
          {
            "lower": 5851,
            "upper": 6004,
            "count": 0
          },
          {
            "lower": 6004,
            "upper": 6157,
            "count": 0
          },
          {
            "lower": 6157,
            "upper": 6310,
            "count": 1
          }
        ],
        "nan_count": 0
      },
      "examples": [
        3250,
        3450,
        3625,
        3650,
        3750,
        3800,
        4675,
        4850,
        6300
      ]
    },
    {
      "name": "alive",
      "type": "boolean",
      "parquet_type": "BOOLEAN",
      "distinct": {
        "exact": 2
      },
      "missing": 0,
      "value_counts": [
        {
          "value": true,
          "count": 7
        },
        {
          "value": false,
          "count": 2
        }
      ],
      "examples": [
        false,
        true
      ]
    }
  ]
}
