crates/data-dict-parquet/tests/snapshots/describe__many_valued_string_columns_report_the_hidden_tail.snap
---
source: crates/data-dict-parquet/tests/describe.rs
expression: "sanitize(&text, &path)"
---
<file>.parquet: 92 rows × 1 column

site — string
  site-01     5
  site-06     5
  site-11     5
  site-16     5
  site-21     5
  site-26     5
  site-02     4
  site-07     4
  site-12     4
  site-17     4
  site-22     4
  site-27     4
  site-03     3
  site-08     3
  site-13     3
  site-18     3
  site-23     3
  site-28     3
  site-04     2
  site-09     2
  (10 other values, e.g. site-00, site-15, site-29)
  -------------
  distinct:  30
  missing:    2 (2.2%)
