crates/data-dict-parquet/tests/snapshots/describe__temporal_columns_render_iso_labels-2.snap
---
source: crates/data-dict-parquet/tests/describe.rs
expression: "sanitize(&sanitize(&json, &path), &path)"
---
{
  "path": "<file>.parquet",
  "rows": 6,
  "columns": [
    {
      "name": "event_date",
      "type": "date",
      "parquet_type": "INT32 / Date",
      "distinct": {
        "exact": 4
      },
      "missing": 0,
      "min": "2020-01-01",
      "max": "2024-01-01",
      "histogram": {
        "bins": [
          {
            "lower": "2020-01-01",
            "upper": "2020-03-14",
            "count": 2
          },
          {
            "lower": "2020-03-14",
            "upper": "2020-05-26",
            "count": 0
          },
          {
            "lower": "2020-05-26",
            "upper": "2020-08-07",
            "count": 0
          },
          {
            "lower": "2020-08-07",
            "upper": "2020-10-19",
            "count": 0
          },
          {
            "lower": "2020-10-19",
            "upper": "2020-12-31",
            "count": 0
          },
          {
            "lower": "2020-12-31",
            "upper": "2021-03-14",
            "count": 1
          },
          {
            "lower": "2021-03-14",
            "upper": "2021-05-26",
            "count": 0
          },
          {
            "lower": "2021-05-26",
            "upper": "2021-08-07",
            "count": 0
          },
          {
            "lower": "2021-08-07",
            "upper": "2021-10-19",
            "count": 0
          },
          {
            "lower": "2021-10-19",
            "upper": "2022-01-01",
            "count": 0
          },
          {
            "lower": "2022-01-01",
            "upper": "2022-03-15",
            "count": 1
          },
          {
            "lower": "2022-03-15",
            "upper": "2022-05-27",
            "count": 0
          },
          {
            "lower": "2022-05-27",
            "upper": "2022-08-08",
            "count": 0
          },
          {
            "lower": "2022-08-08",
            "upper": "2022-10-20",
            "count": 0
          },
          {
            "lower": "2022-10-20",
            "upper": "2023-01-01",
            "count": 0
          },
          {
            "lower": "2023-01-01",
            "upper": "2023-03-15",
            "count": 0
          },
          {
            "lower": "2023-03-15",
            "upper": "2023-05-27",
            "count": 0
          },
          {
            "lower": "2023-05-27",
            "upper": "2023-08-08",
            "count": 0
          },
          {
            "lower": "2023-08-08",
            "upper": "2023-10-20",
            "count": 0
          },
          {
            "lower": "2023-10-20",
            "upper": "2024-01-01",
            "count": 2
          }
        ],
        "nan_count": 0
      },
      "examples": [
        "2020-01-01",
        "2021-01-01",
        "2022-01-08",
        "2024-01-01"
      ]
    },
    {
      "name": "seen_utc",
      "type": "datetime",
      "parquet_type": "INT64 / Timestamp(us,UTC)",
      "distinct": {
        "exact": 3
      },
      "missing": 0,
      "min": "2020-01-01T00:00:00Z",
      "max": "2023-12-31T23:59:59Z",
      "histogram": {
        "bins": [
          {
            "lower": "2020-01-01",
            "upper": "2020-03-14",
            "count": 2
          },
          {
            "lower": "2020-03-14",
            "upper": "2020-05-26",
            "count": 0
          },
          {
            "lower": "2020-05-26",
            "upper": "2020-08-07",
            "count": 0
          },
          {
            "lower": "2020-08-07",
            "upper": "2020-10-19",
            "count": 2
          },
          {
            "lower": "2020-10-19",
            "upper": "2020-12-31",
            "count": 0
          },
          {
            "lower": "2020-12-31",
            "upper": "2021-03-14",
            "count": 0
          },
          {
            "lower": "2021-03-14",
            "upper": "2021-05-26",
            "count": 0
          },
          {
            "lower": "2021-05-26",
            "upper": "2021-08-07",
            "count": 0
          },
          {
            "lower": "2021-08-07",
            "upper": "2021-10-19",
            "count": 0
          },
          {
            "lower": "2021-10-19",
            "upper": "2021-12-31",
            "count": 0
          },
          {
            "lower": "2021-12-31",
            "upper": "2022-03-14",
            "count": 0
          },
          {
            "lower": "2022-03-14",
            "upper": "2022-05-26",
            "count": 0
          },
          {
            "lower": "2022-05-26",
            "upper": "2022-08-07",
            "count": 0
          },
          {
            "lower": "2022-08-07",
            "upper": "2022-10-19",
            "count": 0
          },
          {
            "lower": "2022-10-19",
            "upper": "2022-12-31",
            "count": 0
          },
          {
            "lower": "2022-12-31",
            "upper": "2023-03-14",
            "count": 0
          },
          {
            "lower": "2023-03-14",
            "upper": "2023-05-26",
            "count": 0
          },
          {
            "lower": "2023-05-26",
            "upper": "2023-08-07",
            "count": 0
          },
          {
            "lower": "2023-08-07",
            "upper": "2023-10-19",
            "count": 0
          },
          {
            "lower": "2023-10-19",
            "upper": "2023-12-31",
            "count": 2
          }
        ],
        "nan_count": 0
      },
      "examples": [
        "2020-01-01T00:00:00Z",
        "2020-09-13T12:26:40Z",
        "2023-12-31T23:59:59Z"
      ]
    },
    {
      "name": "seen_local",
      "type": "datetime",
      "parquet_type": "INT64 / Timestamp(ms,local)",
      "distinct": {
        "exact": 3
      },
      "missing": 0,
      "min": "2020-01-01T08:00:00.123",
      "max": "2024-01-01T08:00:00",
      "histogram": {
        "bins": [
          {
            "lower": "2020-01-01",
            "upper": "2020-03-14",
            "count": 2
          },
          {
            "lower": "2020-03-14",
            "upper": "2020-05-26",
            "count": 0
          },
          {
            "lower": "2020-05-26",
            "upper": "2020-08-07",
            "count": 0
          },
          {
            "lower": "2020-08-07",
            "upper": "2020-10-19",
            "count": 2
          },
          {
            "lower": "2020-10-19",
            "upper": "2020-12-31",
            "count": 0
          },
          {
            "lower": "2020-12-31",
            "upper": "2021-03-14",
            "count": 0
          },
          {
            "lower": "2021-03-14",
            "upper": "2021-05-26",
            "count": 0
          },
          {
            "lower": "2021-05-26",
            "upper": "2021-08-07",
            "count": 0
          },
          {
            "lower": "2021-08-07",
            "upper": "2021-10-19",
            "count": 0
          },
          {
            "lower": "2021-10-19",
            "upper": "2021-12-31",
            "count": 0
          },
          {
            "lower": "2021-12-31",
            "upper": "2022-03-14",
            "count": 0
          },
          {
            "lower": "2022-03-14",
            "upper": "2022-05-26",
            "count": 0
          },
          {
            "lower": "2022-05-26",
            "upper": "2022-08-07",
            "count": 0
          },
          {
            "lower": "2022-08-07",
            "upper": "2022-10-20",
            "count": 0
          },
          {
            "lower": "2022-10-20",
            "upper": "2023-01-01",
            "count": 0
          },
          {
            "lower": "2023-01-01",
            "upper": "2023-03-15",
            "count": 0
          },
          {
            "lower": "2023-03-15",
            "upper": "2023-05-27",
            "count": 0
          },
          {
            "lower": "2023-05-27",
            "upper": "2023-08-08",
            "count": 0
          },
          {
            "lower": "2023-08-08",
            "upper": "2023-10-20",
            "count": 0
          },
          {
            "lower": "2023-10-20",
            "upper": "2024-01-01",
            "count": 2
          }
        ],
        "nan_count": 0
      },
      "examples": [
        "2020-01-01T08:00:00.123",
        "2020-09-13T12:26:40",
        "2024-01-01T08:00:00"
      ]
    }
  ]
}
