crates/data-dict-parquet/tests/snapshots/describe__temporal_columns_render_iso_labels.snap
---
source: crates/data-dict-parquet/tests/describe.rs
expression: "sanitize(&description.to_string(), &path)"
---
<file>.parquet: 6 rows × 3 columns

event_date — date (INT32 / Date)
  distinct   4
  missing    0
  2020-01-01 – 2020-03-14  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  2020-03-14 – 2020-05-26                0
  2020-05-26 – 2020-08-07                0
  2020-08-07 – 2020-10-19                0
  2020-10-19 – 2020-12-31                0
  2020-12-31 – 2021-03-14  ▇▇▇▇▇▇        1
  2021-03-14 – 2021-05-26                0
  2021-05-26 – 2021-08-07                0
  2021-08-07 – 2021-10-19                0
  2021-10-19 – 2022-01-01                0
  2022-01-01 – 2022-03-15  ▇▇▇▇▇▇        1
  2022-03-15 – 2022-05-27                0
  2022-05-27 – 2022-08-08                0
  2022-08-08 – 2022-10-20                0
  2022-10-20 – 2023-01-01                0
  2023-01-01 – 2023-03-15                0
  2023-03-15 – 2023-05-27                0
  2023-05-27 – 2023-08-08                0
  2023-08-08 – 2023-10-20                0
  2023-10-20 – 2024-01-01  ▇▇▇▇▇▇▇▇▇▇▇▇  2

seen_utc — datetime (INT64 / Timestamp(us,UTC))
  distinct   3
  missing    0
  2020-01-01 – 2020-03-14  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  2020-03-14 – 2020-05-26                0
  2020-05-26 – 2020-08-07                0
  2020-08-07 – 2020-10-19  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  2020-10-19 – 2020-12-31                0
  2020-12-31 – 2021-03-14                0
  2021-03-14 – 2021-05-26                0
  2021-05-26 – 2021-08-07                0
  2021-08-07 – 2021-10-19                0
  2021-10-19 – 2021-12-31                0
  2021-12-31 – 2022-03-14                0
  2022-03-14 – 2022-05-26                0
  2022-05-26 – 2022-08-07                0
  2022-08-07 – 2022-10-19                0
  2022-10-19 – 2022-12-31                0
  2022-12-31 – 2023-03-14                0
  2023-03-14 – 2023-05-26                0
  2023-05-26 – 2023-08-07                0
  2023-08-07 – 2023-10-19                0
  2023-10-19 – 2023-12-31  ▇▇▇▇▇▇▇▇▇▇▇▇  2

seen_local — datetime (INT64 / Timestamp(ms,local))
  distinct   3
  missing    0
  2020-01-01 – 2020-03-14  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  2020-03-14 – 2020-05-26                0
  2020-05-26 – 2020-08-07                0
  2020-08-07 – 2020-10-19  ▇▇▇▇▇▇▇▇▇▇▇▇  2
  2020-10-19 – 2020-12-31                0
  2020-12-31 – 2021-03-14                0
  2021-03-14 – 2021-05-26                0
  2021-05-26 – 2021-08-07                0
  2021-08-07 – 2021-10-19                0
  2021-10-19 – 2021-12-31                0
  2021-12-31 – 2022-03-14                0
  2022-03-14 – 2022-05-26                0
  2022-05-26 – 2022-08-07                0
  2022-08-07 – 2022-10-20                0
  2022-10-20 – 2023-01-01                0
  2023-01-01 – 2023-03-15                0
  2023-03-15 – 2023-05-27                0
  2023-05-27 – 2023-08-08                0
  2023-08-08 – 2023-10-20                0
  2023-10-20 – 2024-01-01  ▇▇▇▇▇▇▇▇▇▇▇▇  2
